@@ -600,10 +600,11 @@ wxMSW:
 - Don't send any events from wxSpinCtrl::SetRange() even if the value changed.
 - Display system drag images during drag and drop if available (PeterO).
 
-wxOSX:
+wxOSX/Cocoa:
 
 - Fix pages range in the print dialog (Auria).
-- Implement image support in wxNotebook for wxOSX/Cocoa (Malcolm MacLeod).
+- Implement image support in wxNotebook (Malcolm MacLeod).
+- Add support for button mnemonics (joostn).
 
 
 2.9.4: (released 2012-07-09)
